# easy-pil

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  readme.md  readthedocs.yml  requirements.txt  setup.py  test.sh
.github/workflows/: lint-test-typings.yml  lint-test.yml  python-package.yml  python-publish.yml
docs/: conf.py  index.rst  requirements.txt
docs/easy_pil/: easy_pil.canvas.rst  easy_pil.editor.rst  easy_pil.font.rst  easy_pil.text.rst  easy_pil.utils.rst  easy_pil.workspace.rst  modules.rst
docs/examples/: index.rst  owo_level.rst  rank_card.rst  rank_card_two.rst  welcome_image.rst  welcome_image_two.rst
docs/pages/: aio.rst  discordbot.rst  intro.rst
easy_pil/: __init__.py  _version.py  aio_editor.py  canvas.py  color.py  editor.py  font.py  gif.py  gif_editor.py  loader.py  text.py  types.py  utils.py  workspace.py
easy_pil/types/: common.py  workspace.py
examples/: README.md  owo_level.py  rank_card1.py  rank_card2.py  text_bg_color.py  welcome_image1.py  welcome_image2.py
src/easy_pil/: __init__.py  _version.py  canvas.py  editor.py  font.py  text.py  utils.py
tests/: dev.py  test_canvas.py  test_editor.py  test_utils.py
tests/dev/: dev.py
