[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 79

[tool.commands]
fmt = "python3 -m black . ;python3 -m isort ."
build = "python3 -m setup.py sdist bdist_wheel"
publish = "twine upload dist/* --skip-existing"
